VITE env updated

--- a/examples/raffle-admin/.env
+++ b/examples/raffle-admin/.env
@@ -1,2 +1,6 @@
 VITE_PROMO_RAFFLE_SUBGRAPH_URI = "https://api.studio.thegraph.com/query/1718935/promo-raffle/version/latest"
 VITE_PROMO_RAFFLE_SUBGRAPH_API_KEY = "39201029dc1ce2e63353a4323e5466e3"
+
+VITE_AUTH_MODE=supabase
+VITE_SUPABASE_URL=https://vhkwxycotordbetlavpi.supabase.co
+VITE_SUPABASE_PUBLISHABLE_DEFAULT_KEY=sb_publishable_25GrPWohfuZM9u_7n3Xu6w_Iy-YXkAD
