supabase rpc added

--- a/package.json
+++ b/package.json
@@ -114,5 +114,8 @@
             "Documentation": "Documentation",
             "TypeScript": "TypeScript"
         }
+    },
+    "dependencies": {
+        "@supabase/supabase-js": "^2.90.1"
     }
 }
